--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
+    <meta name="google-site-verification" content="DYGSqushAeeVqVPEb21IVVZbd5ifpgav1cZRmq0NHcw" />
+    <meta name="keywords" content="Trent, Thomas, Trent Thomas, Trentagon, Trentag0n, University, UCLA, UW, NASA, JPL, science, scientist, planetary, planet, astrobiology, chemistry, physics, astrophysics, mercury, venus, earth, mars, jupiter, saturn, uranus, neptune, pluto, phd, nsf, seattle, palmyra, new jersey, delran, philadelphia, atmosphere, catling, renyu, oxygen, nitrogen, carbon, argon, archean, neoproterozoic, snowball">
   </head>
   <body>
     <div class="wrapper">
