change body font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
   </head>
-  <body>
+  <body style="font-family: Courier New">
     {% include navigation.html %}
     {{ content }}
   </body>
