--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,11 @@
----
-layout: default
----
-
-{{ content }}
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+  </head>
+  <body style="font-family: Courier New">
+    {% include navigation.html %}
+    {{ content }}
+  </body>
+</html>
