--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body style="font-family: Courier New">
     {% include navigation.html %}
