--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="DYGSqushAeeVqVPEb21IVVZbd5ifpgav1cZRmq0NHcw" />
+    <meta name="keywords" content="Trent, Thomas, Trentagon, Trentag0n, UCLA, UW, NASA, JPL, science, scientist, planetary, planet, astrobiology, chemistry, physics, astrophysics, mercury, venus, earth, mars, jupiter, saturn, uranus, neptune, pluto, atmosphere, oxygen, nitrogen, carbon, argon, archean, neoproterozoic, snowball">
+    <link rel="icon" type="image/png"  href="assets/img/favicon.png">
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body style="font-family: Courier New">
     {{ content }}
