--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,6 @@ a:visited {
 
 a:hover { 
     text-decoration: underline; 
-    color: blue;
-    background-color: rgb(0, 208, 255);
+    color: white;
+    background-color: blue;
    }
