--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="DYGSqushAeeVqVPEb21IVVZbd5ifpgav1cZRmq0NHcw" />
+    <meta name="keywords" content="Trent, Thomas, Trentagon, Trentag0n, UCLA, UW, NASA, JPL, science, scientist, planetary, planet, astrobiology, chemistry, physics, astrophysics, mercury, venus, earth, mars, jupiter, saturn, uranus, neptune, pluto, atmosphere, oxygen, nitrogen, carbon, argon, archean, neoproterozoic, snowball">
+    <link rel="icon" type="image/png"  href="assets/img/favicon.png">
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body style="font-family: Courier New">
     {% include navigation.html %}
     {{ content }}
+    
+    {% if site.google_analytics %}
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', '{{ site.google_analytics }}', 'auto');
+        ga('send', 'pageview');
+    </script>
+    {% endif %}
   </body>
 </html>
