--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,9 @@
     <title>{{ page.title }}</title>
   </head>
   <body style="font-family: Courier New">
+    <div class="content">
     {{ content }}
-
+    </div> 
     {% if site.google_analytics %}
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
