--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,9 +9,11 @@
     <title>{{ page.title }}</title>
   </head>
   <body style="font-family: Courier New">
-    {% include navigation.html %}
-    {{ content }}
-    
+    <div class="content">
+      {% include navigation.html %}
+      {{ content }}
+    </div> 
+
     {% if site.google_analytics %}
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
