--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="google-site-verification" content="DYGSqushAeeVqVPEb21IVVZbd5ifpgav1cZRmq0NHcw" />
     <meta name="keywords" content="Trent, Thomas, Trentagon, Trentag0n, UCLA, UW, NASA, JPL, science, scientist, planetary, planet, astrobiology, chemistry, physics, astrophysics, mercury, venus, earth, mars, jupiter, saturn, uranus, neptune, pluto, atmosphere, oxygen, nitrogen, carbon, argon, archean, neoproterozoic, snowball">
-    <link rel="icon" type="image/png"  href="assets/favicon_dot.png">
+    <link rel="icon" type="image/png"  href="assets/favicon_pentagon_small.png">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ page.title }}</title>
   </head>
