--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ page.title }}</title>
   </head>
-  <body style="font-family: Courier New">
+  <body style="font-family: Arial">
     <div class="content">
       {% include navigation.html %}
       {{ content }}
