--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
             font-family: Helvetica;
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Align to the top */
+            align-items: center; /* Align to the top */
             height: 100vh;
             margin: 0;
         }
 
         .content {
-            padding: 20px; /* Add padding */
+            padding: 40px; /* Add padding */
             /* Add other styles for your content container */
         }
     </style>
