--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
             font-family: Helvetica;
             display: flex;
             justify-content: center;
-            align-items: center; /* Align to the top */
+            align-items: flex-start; /* Align to the top */
             height: 100vh;
             margin: 0;
         }
