--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <nav>
-    <a href="/">Home | trentagon.github.io</a>
+    <a href="/">Home - trentagon.github.io</a>
     <!-- <a href="/about.html">About</a> -->
 </nav>
