--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
 
       .content {
           padding: 40px; /* Add padding */
-          /* Add other styles for your content container */
+          border-left: 4px solid black;
       }
   </style>
   </head>
