--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
         .content {
             padding: 40px; /* Add padding */
-            /* Add other styles for your content container */
+            border-left: 10px solid black;
         }
     </style>
 </head>
