--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
 
       .content {
           padding: 40px; /* Add padding */
-          border-left: 20px solid black;
+         /* border-left: 20px solid black; */
       }
   </style>
   </head>
