--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
         .content {
             padding: 40px; /* Add padding */
-            border-left: 20px solid black;
+            /* border-left: 20px solid black; */
         }
     </style>
 </head>
