--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png"  href="assets/favicon_pentagon_small.png">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ page.title }}</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
       body {
           font-family: Helvetica;
